--- a/core-web-vitals/src/App.css
+++ b/core-web-vitals/src/App.css
@@ -1,8 +1,29 @@
 .App {
   text-align: center;
+  width:90vw;
+  display: flex;
+  flex-direction: row;
 }
 
-.App-logo {
+.Header{
+  width: 10vw;
+  height: 100vh;
+  border-right: solid 1px #ddd;
+  /* background-color: #61dafb; */
+  padding: 2rem;
+  font-size: 1.2rem;
+}
+
+.Content{
+  height: 100vh;
+  flex:1;
+  /* background-color:yellow ; */
+  padding: 2rem;
+  font-size: 1.5rem;
+}
+
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -22,7 +43,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
   color: #61dafb;
